Updated Text and Language

--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -62,6 +62,6 @@ Seeking a Spring/Summer 2019 Co-op
 \cvclub{\href{https://csh.rit.edu/}{Computer Science House}}{System Administrator}{Responsible for administrating CSHs student run server room and all systems in it.}{May 2018 - Present}
 \cvclub{}{Evaluations Director}{Responsible for connecting with the RIT student community, as well as organizing the process of screening, accepting, and welcoming new members.}{June 2018 - Present}
 \cvclub{}{Financial Director}{Responsible for managing finances, collecting semesterly member dues, and hatching new fundraising schemes.}{January 2018 - June 2018}
-\cvclub{}{Insights Director}{Plan and execute a collge overnight program for high school seniors.}{August 2017 - June 2018}
-\cvclub{}{Secretary}{Take notes and record house matters.}{August 2017 - January 2018}
+\cvclub{}{Insights Director}{Planned and executed a college overnight program at CSH for high school seniors over two nights in the spring.}{August 2017 - June 2018}
+\cvclub{}{Secretary}{Take notes and perform administative tasks on behalf of the house.}{August 2017 - January 2018}
 
