Updating for Summer

--- a/resume.tex
+++ b/resume.tex
@@ -96,6 +96,7 @@
 
 \cvproject{wasp}{\href{https://github.com/devinmatte/wasp}{github.com/devinmatte/wasp}}{A command line utility for generating and managing web configuration files. Including the manifest.json, bower.json, package.json and composer.json. Built in Python, and packaged for Linux. Currently managing as a multiple contributor project.}{Python}
 
+\cvproject{Calendar Maker}{\href{https://github.com/NHSTechTeam/Calendar-Maker}{github.com/NHSTechTeam/Calendar-Maker}}{Built a calendar generator for the high school I attended. Designed a PHP web app that generated a csv file for import into Google calendar by students and faculty. Still maintaining and hosting for the school.}{PHP}
 
 % \cvsection{}{Volunteer}
 
