--- a/resume.tex
+++ b/resume.tex
@@ -78,7 +78,7 @@
 %% \cvsection title in the "main" bar.
 \cvsection[page1sidebar]{Experience}
 
-\cvexperience{\href{http://datto.com/}{Datto Inc.}}{Software Engineering Intern}{Worked on the Admin Portal Team building the administrative portal for the company. Worked in PHP with Symfony, Javascript, MySQL, Apache, Docker, and Ubuntu.}{May 2018 -- August 2018}{}
+\cvexperience{\href{http://datto.com/}{Datto Inc.}}{Software Engineering Intern}{Worked on the Admin Portal Team building the administrative portal for the company. Worked in PHP with Symfony, Javascript, MySQL, Apache, Docker, and Ubuntu.}{May 2018 -- August 2018}
 
 \cvexperience{\href{http://zorustech.com/}{Zorus Inc.}}{Software Engineer}{Worked during startup stages as one of three engineers at the company. Built a customer portal and corresponding servers from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}{May 2017 -- August 2017}
 
