--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -1,6 +1,6 @@
 \cvsection{Objective}
 \begin{quote}
-Seeking a Summer 2019 Co-op
+Seeking a Spring/Summer 2020 Co-op
 \end{quote}
 
 \cvsection{Education}
