Adding Datto 2 and new skills

--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -47,6 +47,7 @@ Seeking a Spring/Summer 2020 Co-op
 \cvtag{NGINX}
 \cvtag{Bash}
 \cvtag{Openshift}
+\cvtag{Kubernetes}
 \cvtag{Docker}
 \cvtag{PostgreSQL}
 \cvtag{Symfony}
@@ -56,6 +57,7 @@ Seeking a Spring/Summer 2020 Co-op
 \cvtag{LDAP}
 \cvtag{React}
 \cvtag{Nodejs}
+\cvtag{GraphQL}
 
 \cvsection{Activities}
 
