--- a/resume.tex
+++ b/resume.tex
@@ -78,7 +78,8 @@
 %% \cvsection title in the "main" bar.
 \cvsection[page1sidebar]{Experience}
 
-\cvexperience{\href{http://datto.com/}{Datto Inc.}}{Software Engineering Intern}{Worked on the Admin Portal Team building the administrative portal for the company. Worked in PHP with Symfony, Javascript, MySQL, Apache, Docker, and Ubuntu.}{May 2018 -- August 2018}
+\cvexperience{\href{http://datto.com/}{Datto Inc.}}{Software Engineering Intern}{Worked on the Core Products team creating the backup software for their flagship product. Building new backup features for datto Siris and Alto devices. Working in PHP with Symfony, ZFS, Docker, Ubuntu, Hyper-V, ESX, and Windows Services}{January 2019 -- Present}
+\morecvexperience{Software Engineering Intern}{Worked on the Admin Portal Team building the administrative portal for the company. Worked in PHP with Symfony, Javascript, MySQL, Apache, Docker, and Ubuntu.}{May 2018 -- August 2018}
 
 \cvexperience{\href{http://zorustech.com/}{Zorus Inc.}}{Software Engineer}{Worked during startup stages as one of three engineers at the company. Built a customer portal and corresponding servers from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}{May 2017 -- August 2017}
 
@@ -91,8 +92,6 @@
 \cvproject{ScheduleMaker}{\href{https://github.com/ComputerScienceHouse/schedulemaker}{github.com/ComputerScienceHouse/schedulemaker}}{Maintain and contribute as the primary maintainer to an Open Source web app used by over 8,000 students each semester at RIT to build their class schedules. Implemented new features and improving the codebase using PHP and Angular.}{PHP}
 
 \cvproject{AWS Wrapper}{\href{https://github.com/SquashProjectTwo/AWS-Wrapper}{github.com/SquashProjectTwo/AWS-Wrapper}}{Created at Brickhack4, a web application that created a new UI interface for AWS, specifically EC2 by using Boto3 to immitate all the functions provided by EC2 in their current web interface. Won best use of AWS at the event.}{Python}
-
-\cvproject{Contrb}{\href{https://github.com/Contrb}{github.com/Contrb}}{A website built to display coding projects and open source contributions in a visually appealing manor. Built with a React frontend along with a Nodejs and GraphQL backend. The application utilizes GitHub Oauth, GitHub v4 API, with many more integrations planned.}{Javascript}
 
 \cvproject{wasp}{\href{https://github.com/devinmatte/wasp}{github.com/devinmatte/wasp}}{A command line utility for generating and managing web configuration files. Including the manifest.json, bower.json, package.json and composer.json. Built in Python, and packaged for Linux. Currently managing as a multiple contributor project.}{Python}
 
