Updating with Openshift and more

--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -35,6 +35,7 @@ Seeking a Spring/Summer 2020 Co-op
 \cvtag{Javascript}
 \cvtag{\LaTeX}
 \cvtag{C}
+\cvtag{Typescript}
 
 \smallskip
 
@@ -62,8 +63,8 @@ Seeking a Spring/Summer 2020 Co-op
 \cvsection{Activities}
 
 \cvclub{\href{https://csh.rit.edu/}{Computer Science House}}{System Administrator}{Responsible for administrating CSHs student run server room and all systems in it.}{May 2018 - Present}
-\cvclub{}{Evaluations Director}{Responsible for connecting with the RIT student community, as well as organizing the process of screening, accepting, and welcoming new members.}{June 2018 - Present}
-\cvclub{}{Financial Director}{Responsible for managing finances, collecting semesterly member dues, and hatching new fundraising schemes.}{January 2018 - June 2018}
-\cvclub{}{Insights Director}{Planned and executed a college overnight program at CSH for high school seniors over two nights in the spring.}{August 2017 - June 2018}
-\cvclub{}{Secretary}{Take notes and perform administative tasks on behalf of the house.}{August 2017 - January 2018}
+\cvclub{}{Evaluations Director}{Responsible for connecting with the RIT student community, as well as organizing the process of screening, accepting, and welcoming new members.}{Jun 2018 - Dec 2018}
+\cvclub{}{Financial Director}{Responsible for managing finances, collecting semesterly member dues, and hatching new fundraising schemes.}{Jan 2018 - Jun 2018}
+\cvclub{}{Insights Director}{Planned and executed a college overnight program at CSH for high school seniors over two nights in the spring.}{Aug 2017 - Jun 2018}
+\cvclub{}{Secretary}{Take notes and perform administative tasks on behalf of the house.}{Aug 2017 - Jan 2018}
 
