Latex changes only: Adding Constant Contact and Cleaning up

--- a/resume.tex
+++ b/resume.tex
@@ -78,7 +78,9 @@
 %% \cvsection title in the "main" bar.
 \cvsection[page1sidebar]{Experience}
 
-\cvexperience{\href{http://datto.com/}{Datto Inc.}}{Software Engineering Intern}{Worked on the Core Products and Universal Service Management teams. Built new backup features for their flagship product as well as web interfaces for restoring them in the web. Worked in PHP with Symfony, ZFS, Typescript, Javascript, Docker, ESX, Hyper-V and Windows Services.}{Jan 2019 -- Present}
+\cvexperience{\href{https://www.constantcontact.com}{Constant Contact}}{Software Engineering Intern}{Worked on the ToolKit team creating the main customer facing campaigns page, social campaign inbox and the mailchimp import tool. Worked in Java with Springboot, and Javascript with React and Angular.js.}{Jun 2019 -- Aug 2019}
+
+\cvexperience{\href{http://datto.com/}{Datto Inc.}}{Software Engineering Intern}{Worked on the Core Products and Universal Service Management teams. Built new backup features for their flagship product as well as web interfaces for restoring them in the web. Worked in PHP with Symfony, ZFS, Typescript, Javascript, Docker, ESX, Hyper-V and Windows Services.}{Jan 2019 -- May 2019}
 \morecvexperience{Software Engineering Intern}{Worked on the Admin Portal Team building the administrative portal for the company. Worked in PHP with Symfony, Javascript, MySQL, Apache, Docker, and Ubuntu.}{May 2018 -- Aug 2018}
 
 \cvexperience{\href{http://zorustech.com/}{Zorus Inc.}}{Software Engineer}{Worked during startup stages as one of three engineers at the company. Built a customer portal and corresponding servers from the ground up. Worked in PHP using Slim, Javascript, Python, NGINX, MySQL and AWS.}{May 2017 -- Aug 2017}
