Adding new skills to tools

--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -44,16 +44,16 @@ Seeking a Spring/Summer 2020 Co-op
 \cvtag{git}
 \cvtag{Flask}
 \cvtag{SQLAlchemy}
-\cvtag{MySQL}
 \cvtag{NGINX}
 \cvtag{Bash}
-\cvtag{Openshift}
+\cvtag{Openshift/OKD}
 \cvtag{Kubernetes}
 \cvtag{Docker}
-\cvtag{PostgreSQL}
 \cvtag{Symfony}
+\cvtag{Puppet}
 \cvtag{OIDC}
-\cvtag{Gulp/Grunt}
+\cvtag{Gulp}
+\cvtag{Grunt}
 \cvtag{EC2}
 \cvtag{LDAP}
 \cvtag{React}
