--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -42,10 +42,12 @@ Seeking a Spring/Summer 2020 Co-op
 \cvsubsection{Tools}
 \cvtag{Linux}
 \cvtag{git}
+\cvtag{MySQL}
 \cvtag{Flask}
 \cvtag{SQLAlchemy}
 \cvtag{NGINX}
 \cvtag{Bash}
+\cvtag{PostgreSQL}
 \cvtag{Openshift/OKD}
 \cvtag{Kubernetes}
 \cvtag{Docker}
