--- a/resume.tex
+++ b/resume.tex
@@ -56,6 +56,7 @@
 \begin{document}
 \name{DEVIN MATTÉ}
 \tagline{Full-Stack Software Engineer}
+\photo{3.5cm}{}
 % Cropped to square from my github page
 \personalinfo{%
   % Not all of these are required!
