Adding openshift link

--- a/resume.tex
+++ b/resume.tex
@@ -94,7 +94,7 @@
 
 \cvproject{ScheduleMaker}{\href{https://github.com/ComputerScienceHouse/schedulemaker}{github.com/ComputerScienceHouse/schedulemaker}}{Maintain and contribute as the primary maintainer to an Open Source web app used by over 8,000 students each semester at RIT to build their class schedules. Implemented new features and improving the codebase using PHP and Angular.}{PHP}
 
-\cvproject{Openshift (OKD) Cluster}{\href{}{}}{Stood up a fully functional, multi-user Openshift Origin Cluster. The cluster is built of 15 nodes, 5 master, 5 etcd, and a load balancer. The cluster supports over 100 projects currently including our GitLab, Keycloak SSO, and s3 instances.}{DevOps}
+\cvproject{Openshift (OKD) Cluster}{\href{https://devinmatte.me/deploying-openshift}{devinmatte.me/deploying-openshift}}{Stood up a fully functional, multi-user Openshift Origin Cluster. The cluster is built of 15 nodes, 5 master, 5 etcd, and a load balancer. The cluster supports over 100 projects currently including our GitLab, Keycloak SSO, and s3 instances.}{DevOps}
 
 \cvproject{AWS Wrapper}{\href{https://github.com/SquashProjectTwo/AWS-Wrapper}{github.com/SquashProjectTwo/AWS-Wrapper}}{Created at Brickhack4, a web application that created a new UI interface for AWS, specifically EC2 by using Boto3 to immitate all the functions provided by EC2 in their current web interface. Won best use of AWS at the event.}{Python}
 
