--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -5,7 +5,7 @@ Seeking a Spring/Summer 2020 Co-op
 
 \cvsection{Education}
 
-\cvevent{Rochester Institute of Technology}{B.S. in Software Engineering}{2016-2021}{}
+\cveducation{Rochester Institute of Technology}{B.S. in Software Engineering}{2016-2021}
 
 % \cvsection{Passion}
 
@@ -39,7 +39,8 @@ Seeking a Spring/Summer 2020 Co-op
 
 \smallskip
 
-\cvsubsection{Tools}
+\cvsubsection{Technologies}
+
 \cvtag{Linux}
 \cvtag{git}
 \cvtag{MySQL}
@@ -48,10 +49,11 @@ Seeking a Spring/Summer 2020 Co-op
 \cvtag{NGINX}
 \cvtag{Bash}
 \cvtag{PostgreSQL}
-\cvtag{Openshift/OKD}
+\cvtag{OpenShift/OKD}
 \cvtag{Kubernetes}
 \cvtag{Docker}
 \cvtag{Symfony}
+\cvtag{Jest}
 \cvtag{Puppet}
 \cvtag{OIDC}
 \cvtag{Gulp}
