--- a/resume.tex
+++ b/resume.tex
@@ -81,7 +81,7 @@
 %% \cvsection title in the "main" bar.
 \cvsection[page1sidebar]{Experience}
 
-\cvexperience{\href{https://www.constantcontact.com}{Constant Contact}}{Remote Software Engineering Intern}{Asked to continue work remotely to help build the new marketing calendar features, including Google Calendar and Outlook integrations. Worked in Java with Springboot, and Javascript with React.}{Aug 2019 -- Present}
+\cvexperience{\href{https://www.constantcontact.com}{Constant Contact}}{Remote Software Engineering Intern}{Asked to continue work remotely to help build the new marketing calendar features, including Google Calendar and Outlook integrations. Worked in Java with Springboot, AWS Lambdas and Javascript with React.}{Aug 2019 -- Present}
 \morecvexperience{Software Engineering Intern}{Worked on the ToolKit team creating the main customer facing campaigns page, social campaign inbox and the mailchimp import tool. Worked in Java with Springboot, and Javascript with React and Angular.js.}{Jun 2019 -- Aug 2019}
 
 \cvexperience{\href{http://datto.com/}{Datto Inc.}}{Software Engineering Intern}{Worked on the Core Products and Universal Service Management teams. Built new backup features for their flagship product as well as web interfaces for restoring them in the web. Worked in PHP with Symfony, ZFS, Typescript, Javascript, Docker, ESX, Hyper-V and Windows Services.}{Jan 2019 -- May 2019}
