No more objective. Looking for full-time

--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -1,8 +1,3 @@
-\cvsection{Objective}
-\begin{quote}
-Seeking a Summer 2020 Co-op
-\end{quote}
-
 \cvsection{Education}
 
 \cveducation{Rochester Institute of Technology}{B.S. in Software Engineering}{2016-2021}
@@ -53,7 +48,6 @@ Seeking a Summer 2020 Co-op
 \cvtag{Kubernetes}
 \cvtag{Docker}
 \cvtag{Symfony}
-\cvtag{Jest}
 \cvtag{Puppet}
 \cvtag{OIDC}
 \cvtag{Gulp}
@@ -67,6 +61,7 @@ Seeking a Summer 2020 Co-op
 \cvsection{Activities}
 
 \cvclub{\href{https://csh.rit.edu/}{Computer Science House}}{System Administrator}{Responsible for administrating CSHs student run server room and all systems in it.}{May 2018 - Present}
+\cvclub{}{Webmaster}{Responsible for maintaining and updating outward facing websites.}{Feb 2018 - Present}
 \cvclub{}{Evaluations Director}{Responsible for connecting with the RIT student community, as well as organizing the process of screening, accepting, and welcoming new members.}{Jun 2018 - Dec 2018}
 \cvclub{}{Financial Director}{Responsible for managing finances, collecting semesterly member dues, and hatching new fundraising schemes.}{Jan 2018 - Jun 2018}
 \cvclub{}{Insights Director}{Planned and executed a college overnight program at CSH for high school seniors over two nights in the spring.}{Aug 2017 - Jun 2018}
