Adding datadog and apple

--- a/altacv.cls
+++ b/altacv.cls
@@ -40,7 +40,7 @@
 % \RequirePackage{marginfix}
 
 \setlength{\parindent}{0pt}
-\newcommand{\divider}{\textcolor{body!30}{\hdashrule{\linewidth}{0.6pt}{0.5ex}}\medskip}
+\newcommand{\divider}{\textcolor{body!30}{\hdashrule{\linewidth}{0.5pt}{0.5ex}}\medskip}
 
 \newcommand{\emailsymbol}{\faAt}
 \newcommand{\phonesymbol}{\faPhone}
@@ -75,14 +75,14 @@
     \ifdef{\@photodiameter}{\begin{minipage}{\dimexpr\linewidth-\@photodiameter-2em}}{}%
     \raggedright\color{emphasis}%
     {\Huge\bfseries\MakeUppercase{\@name}\par}
-    \medskip
+    \smallskip
     {\large\bfseries\color{accent}\@tagline\par}
     \ifdef{\@photodiameter}{%
     \end{minipage}\hfill%
     \begin{minipage}{\@photodiameter}
     {\footnotesize\bfseries\@personalinfo\par}
     \end{minipage}\par}{}%
-  \endgroup\medskip
+  \endgroup\smallskip
 }
 
 \renewenvironment{quote}{\color{accent}\itshape\large}{\par}
@@ -91,12 +91,12 @@
   \bigskip%
   \ifstrequal{#1}{}{}{\marginpar{\vspace*{\dimexpr1pt-\baselineskip}\raggedright\input{#1}}}% 
   {\color{heading}\LARGE\bfseries\MakeUppercase{#2}}\\[-1ex]%
-  {\color{heading-line}\rule{\linewidth}{2pt}\par}\medskip
+  {\color{heading-line}\rule{\linewidth}{2pt}\par}\smallskip
 }
 
 \newcommand{\cvsubsection}[1]{%
   \smallskip%
-  {\color{emphasis}\large\bfseries{#1}\par}\medskip
+  {\color{emphasis}\normalsize\bfseries{#1}\par}\smallskip
 }
 
 \newcommand{\cvevent}[4]{%
@@ -118,20 +118,20 @@
 }
 
 \newcommand{\cvclub}[4]{%
-  {\large\color{emphasis}#1\par}
+  {\normalsize\color{emphasis}#1\par}
   \smallskip
-  \normalsize\textbf{\color{accent}#2}
-  | {\textbf{\small#4}}\par
-  \small{#3}\par
-  \smallskip
+  \small\textbf{\color{accent}#2}
+  | {\textbf{\footnotesize#4}}\par
+  \footnotesize{#3}\par
+  \medskip
 }
 
 \newcommand{\cvproject}[5]{%
-  {\large\color{emphasis}#1 | \textbf{\small\color{accent}#4}\par}
+  {\normalsize\color{emphasis}#1 | \textbf{\footnotesize\color{accent}#4}\par}
   \smallskip
   \textbf{\color{accent}#2}\par
   \smallskip
-  \small\color{body}#3\par
+  \footnotesize\color{body}#3\par
   \medskip
 }
 
@@ -148,19 +148,20 @@
 }
 
 \newcommand{\cvexperience}[4]{%
-  {\large\color{emphasis}#1  \par}
   \smallskip
-  {\normalsize\textbf{\color{accent}#2} | {\textbf{\small\space#4}}\par}
+  {\normalsize\color{emphasis}#1  \par}
   \smallskip
-  \small\color{body}#3\par
-  \medskip
+  {\small\textbf{\color{accent}#2} | {\textbf{\footnotesize\space#4}}\par}
+  \smallskip
+  \footnotesize\color{body}#3\par
+  \smallskip
 }
 
 \newcommand{\morecvexperience}[3]{%
-  {\normalsize\textbf{\color{accent}#1} | {\textbf{\small\space#3}}\par}
+  {\small\textbf{\color{accent}#1} | {\textbf{\footnotesize\space#3}}\par}
   \smallskip
-  \small\color{body}#2\par
-  \medskip
+  \footnotesize\color{body}#2\par
+  \smallskip
 }
 
 \newcommand{\cvachievement}[3]{%
@@ -172,7 +173,7 @@
 }
 
 \newcommand{\cvtag}[1]{%
-  \tikz[baseline]\node[anchor=base,draw=body!30,rounded corners,inner xsep=1ex,inner ysep =0.75ex,text height=1.5ex,text depth=.25ex]{#1};
+	\tikz[baseline]\node[anchor=base,draw=body!30,rounded corners,inner xsep=0.95ex,inner ysep =0.70ex,text height=1.40ex,text depth=.20ex]{\small#1};
 }
 
 \newcommand{\cvlanguage}[2]{%
