--- a/page1sidebar.tex
+++ b/page1sidebar.tex
@@ -22,14 +22,15 @@
 
 \cvsubsection{Languages}
 \cvtag{Python}
-\cvtag{PHP}
-\cvtag{SQL}
 \cvtag{Java}
 \cvtag{Javascript}
+\cvtag{SQL}
+\cvtag{Typescript}
+\cvtag{PHP}
+\cvtag{Swift}
 \cvtag{HTML}
 \cvtag{CSS/Sass}
 \cvtag{\LaTeX}
-\cvtag{Typescript}
 \cvtag{C}
 
 \smallskip
@@ -40,6 +41,7 @@
 \cvtag{git}
 \cvtag{MySQL}
 \cvtag{Flask}
+\cvtag{React}
 \cvtag{SQLAlchemy}
 \cvtag{NGINX}
 \cvtag{Bash}
@@ -54,12 +56,12 @@
 \cvtag{Grunt}
 \cvtag{EC2}
 \cvtag{LDAP}
-\cvtag{React}
 \cvtag{Nodejs}
 \cvtag{GraphQL}
 
 \cvsection{Activities}
 
+\cvclub{\href{https://sg.rit.edu/}{RIT Student Government}}{GCCIS Senator}{Represents the Computing College to RITs student government}{May 2020 - May 2021}
 \cvclub{\href{https://csh.rit.edu/}{Computer Science House}}{System Administrator}{Responsible for administrating CSHs student run server room and all systems in it.}{May 2018 - Present}
 \cvclub{}{Webmaster}{Responsible for maintaining and updating outward facing websites.}{Feb 2018 - Present}
 \cvclub{}{Evaluations Director}{Responsible for connecting with the RIT student community, as well as organizing the process of screening, accepting, and welcoming new members.}{Jun 2018 - Dec 2018}
