--- a/resume.tex
+++ b/resume.tex
@@ -22,7 +22,6 @@
 %% want to use XeLaTeX, you'll need to install
 %% Academicons.ttf in your operating system's font %% folder.
 
-
 % Change the page layout if you need to
 \geometry{left=1cm,right=8.8cm,marginparwidth=6.8cm,marginparsep=1cm,top=1cm,bottom=1cm}
 
@@ -81,7 +80,11 @@
 %% \cvsection title in the "main" bar.
 \cvsection[page1sidebar]{Experience}
 
-\cvexperience{\href{https://www.constantcontact.com}{Constant Contact}}{Remote Software Engineering Intern}{Asked to continue work remotely to help build the new marketing calendar features, including Google Calendar and Outlook integrations. Worked in Java with Springboot, AWS Lambdas and Javascript with React.}{Aug 2019 -- Present}
+\cvexperience{\href{https://apple.com}{Apple}}{Software Engineering Intern}{Interned on the Developer Tools Team builing a stability tracking application. Built using React, Typescript, Swift, and Kubernetes.}{Jun 2020 -- Aug 2020}
+
+\cvexperience{\href{https://datadoghq.com}{Datadog}}{Software Engineering Intern}{A member of the Data Engineering Infrastructure team building out tools for data engineers to run big data pipelines. Worked on a new React frontend tool, as well as aiding in preparing services for Fedramp compliance. Worked in React with Typescript, Python2 and 3, Scala and Java.}{Jan 2020 -- May 2020}
+
+\cvexperience{\href{https://www.constantcontact.com}{Constant Contact}}{Remote Software Engineering Intern}{Asked to continue work remotely to help build the new marketing calendar features, including Google Calendar and Outlook integrations. Worked in Java with Springboot, AWS Lambdas and Javascript with React.}{Aug 2019 -- Dec 2019}
 \morecvexperience{Software Engineering Intern}{Contributed to the main customer facing campaigns page, social campaign inbox and the mailchimp import tool. Worked in Java with Springboot, and Javascript with React and Angular.js.}{Jun 2019 -- Aug 2019}
 
 \cvexperience{\href{http://datto.com/}{Datto Inc.}}{Software Engineering Intern}{Built new backup features for their flagship product as well as web interfaces for restoring them in the web. Worked in PHP with Symfony, ZFS, Typescript, Javascript, Docker, ESX, Hyper-V and Windows Services.}{Jan 2019 -- May 2019}
